WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199828
[ContentChangeObserver] Cancel ongoing content observation when tap is failed/cancelled
https://bugs.webkit.org/show_bug.cgi?id=199828
Summary
[ContentChangeObserver] Cancel ongoing content observation when tap is failed...
alan
Reported
2019-07-16 07:53:32 PDT
ssia
Attachments
Patch
(4.61 KB, patch)
2019-07-16 08:17 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-16 07:53:53 PDT
<
rdar://problem/53152696
>
alan
Comment 2
2019-07-16 08:17:39 PDT
Created
attachment 374208
[details]
Patch
WebKit Commit Bot
Comment 3
2019-07-16 09:43:33 PDT
Comment on
attachment 374208
[details]
Patch Clearing flags on attachment: 374208 Committed
r247483
: <
https://trac.webkit.org/changeset/247483
>
WebKit Commit Bot
Comment 4
2019-07-16 09:43:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug